# OpenGL

./: .gitignore  CMakeLists.txt
opengl/: application.cpp  application.hpp  main.cpp
opengl/math/: matrix4.hpp  vector2.cpp  vector2.hpp  vector3.cpp  vector3.hpp
opengl/scene/: scene.hpp  scene_manager.cpp  scene_manager.hpp  test_scene.cpp  test_scene.hpp
